@@ -1,11 +1,16 @@
 package com.example.project.mapper;
 
+import com.example.project.dto.ClassDetailsDto;
+import com.example.project.dto.ClassDto;
+import com.example.project.dto.InstructorDto;
+import com.example.project.dto.NewClassDto;
 import com.example.project.entity.Instructor;
 import com.example.project.entity.Class;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class ClassMapper {
@@ -21,8 +26,7 @@ public class ClassMapper {
         return ClassDto.builder()
                 .name(cls.getName())
                 .description(cls.getDescription())
-                .hoursDuration(cls.getDuration())
-                .ageLimit(cls.getAgeLimit())
+                .hoursDuration(cls.getHoursDuration())
                 .level(cls.getLevel())
                 .instructors(instructors)
                 .build();
@@ -32,8 +36,7 @@ public class ClassMapper {
         return Class.builder()
                 .name(classDto.getName())
                 .description(classDto.getDescription())
-                .hoursDuration(classDto.getDuration())
-                .ageLimit(classDto.getAgeLimit())
+                .hoursDuration(classDto.getHoursDuration())
                 .level(classDto.getLevel())
                 .instructors(classDto.getInstructors())
                 .build();
@@ -44,18 +47,17 @@ public class ClassMapper {
                 .name(cls.getName())
                 .description(cls.getDescription())
                 .hoursDuration(cls.getHoursDuration())
-                .ageLimit(cls.getAgeLimit())
                 .level(cls.getLevel())
-                .instructors(cls.getInstructors().stream().map(instructorMapper::mapToInstructorDto).toList())
+                .instructors(cls.getInstructors().stream().map(instructorMapper::mapToInstructorDto).collect(Collectors.toList()))
                 .scheduleDetails(
-                        cls.getSchedules().stream().map(classSchedule ->
+                        cls.getClassSchedules().stream().map(classSchedule ->
                                 ClassDetailsDto.ClassScheduleDetails.builder()
                                         .dayOfWeek(classSchedule.getId().getDayOfWeek())
                                         .startTime(classSchedule.getId().getStartTime())
-                                        .price(classSchedule.getPrice())
+                                        .classPrice(classSchedule.getClassPrice())
                                         .studioName(classSchedule.getStudio().getName())
                                         .build()
-                        ).toList()
+                        ).collect(Collectors.toList())
                 )
                 .build();
     }
